middleware/elastic/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
spec:
  selector:
    agent.k8s.elastic.co/name: apm-agent
  ports:
    - protocol: TCP
      port: 8200
