middleware/elastic/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: private-nginx
  tls:
    - hosts:
        - kibana.tools.${cluster_region}.${cluster_domain}
      secretName: kibana-ingress-tls
  rules:
    - host: kibana.tools.${cluster_region}.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
